<resources>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">QR Сканнер</string>
    <string name="website">Вебсайт</string>
    <string name="enter_or_paste_url_here_to_create_qr_code">Введите или вставьте текст что бы создать QR код</string>
    <string name="paste">Вставить</string>
    <string name="save">Сохранить</string>
    <string name="enter_the_filename_here">Введите название файла тут</string>
    <string name="settings">Настройки</string>
    <string name="general_settings">Основные настройки</string>
    <string name="beep">Звуковой сигнал</string>
    <string name="beep_when_scan_is_succesful">Звуковой сигнал при успешном сканировании</string>
    <string name="auto_copied_to_clipboard">Автоматическое копирование в буфер обмена</string>
    <string name="language_options">Настройки языка</string>
    <string name="rate_us">Оцените нас</string>
    <string name="share_with_friends">Поделиться с друзьями</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="help">Помощь</string>
    <string name="version_1_0_0">Версия 1.0.0</string>
    <string name="vibrate">Вибрация</string>
    <string name="vibrate_when_scan_is_succesful">Вибрация при успешном сканировании</string>
    <string name="history">История</string>
    <string name="scan">Сканированные</string>
    <string name="autocopy_to_clipboard">Автокопирование</string>
    <string name="url">URL-адрес или текст</string>
    <string name="disable_ads">Отключить рекламу</string>
    <string name="scanned">Сканы</string>
    <string name="created">Созданные</string>
    <string name="add_to_contacts_error">Не указан телефон или имя</string>
    <string name="mail">Почта</string>
    <string name="youtube">Youtube</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="myCard">Моя карточка</string>
    <string name="wifi">WI-FI</string>
    <string name="twitter">Twitter</string>
    <string name="phone">Телефон</string>
    <string name="text">Текст</string>
    <string name="contact">Контакт</string>
    <string name="uri">URL</string>
    <string name="Открыть">Открыть</string>
    <string name="safety_mode">Режим безопасности</string>
    <string name="ssidName">Имя сети (SSID)</string>
    <string name="wpa_wpa_2">WPA/WPA 2</string>
    <string name="wep">WEP</string>
    <string name="none">None</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="me_link">Me Link</string>
    <string name="me_username">Me Username</string>
    <string name="visit_card">Визитная карточка</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email_address">Email адрес</string>
    <string name="profile">Профиль</string>
    <string name="paypal">PayPal</string>
    <string name="link">Ссылка</string>
    <string name="place_qr_code">Расположите QR код/штрих-код по \n центру рамки</string>
    <string name="enter_instagram_profile">Введите профиль Instagram</string>
    <string name="утеук_еуче">Введите текст</string>
    <string name="notes">Заметки</string>
    <string name="paypal_link">Paypal.Me Link</string>
    <string name="sms">СМС</string>
    <string name="content">Контент</string>
    <string name="enter_text">Введите текст</string>
    <string name="here_is_the_text_that_you_have_in_clipboard">Тут текст который у вас в clipboard</string>
    <string name="password">Пароль</string>
    <string name="channel_id">Channel ID</string>
    <string name="video_id">Video ID</string>
    <string name="enter_youtube_link">Введите ссылку на youtube</string>
    <string name="copy">Копировать</string>
    <string name="find_in_google">Поиск в google</string>
    <string name="share">Поделиться</string>
    <string name="send_by_email">Отправить по email</string>
    <string name="add_calendar_event">Добавить событие в календарь</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="send_by_sms">Отправить SMS</string>
    <string name="add_to_contacts">Добавить в контакты</string>
    <string name="call">Позвонить</string>
    <string name="add_contact">Добавить контакт</string>
    <string name="join_the_network">Присоединиться к сети</string>
    <string name="instagram">Instagram</string>
    <string name="enter_url_or_text">Введите или вставьте url адрес или текст</string>
    <string name="calendar">Календарь</string>
    <string name="title">Заголовок</string>
    <string name="location">Локация</string>
    <string name="all_day">Весь день</string>
    <string name="beginning">Начало</string>
    <string name="end_time">Конец</string>
    <string name="description">Описание</string>
    <string name="name">Имя</string>
    <string name="email_topic">Тема письма</string>
    <string name="e_mail">E-mail</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="enter_facebook_id">Введите Facebook ID</string>
    <string name="birthday">День рождения</string>
    <string name="spotify">Spotify</string>
    <string name="artist_name">Имя артиста</string>
    <string name="song_name">Название песни</string>
    <string name="text_headtitle">Text</string>
    <string name="enter_username">Введите username</string>
    <string name="viber">Viber</string>
    <string name="other_users_might_contact_you_after_scanning_your_qr">Другие пользователи смогут связаться с вами после сканирования QR кода который вы создадите</string>
    <string name="feedback">Обратная связь</string>
    <string name="could_not_save_qr_to_database">Не получилось сохранить qr код в базу данных</string>
    <string name="enter_information">Введите информацию</string>
    <string name="contacts_permission_required">Необходимо разрешение на чтение контактов для импорта</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="wrong_phone_format_entered">Введён неправильный формат номера</string>
    <string name="succesfully_copied_to_clipboard">Успешно скопировано в буфер обмена</string>
    <string name="enter_url">Введите ссылку</string>
    <string name="enter_facebook_url">Введите Facebook URL</string>
    <string name="enter_twitter_username">Введите username</string>
    <string name="enter_video_id">Введите id видео</string>
    <string name="enter_channel_id">Введите id канала</string>
    <string name="create">Создать</string>
    <string name="save_qr_code">Сохранение QR кода</string>
    <string name="saved_to_gallery">Saved QR code to gallery with name</string>
</resources>
